fix-drag-and-address-bar-overlap.css
#header {
    position: absolute !important;
    top: 0 !important;
    left: 0 !important;
    width: 100% !important;
    height: 16px !important;
}

#pagetitle {
    display: none !important;
}

#browser:not(.maximized) #titlebar > div.window-buttongroup {
    height: 32px !important;
    margin-top: 10px !important;
}

#tabs-container:not(.dummy) {
    padding-top: 0px !important;
}

#titlebar > button {
    width: 50px;
    height: 33px !important;
    padding-left: 1px !important;
    color: var(--colorFg);
    background-color: var(--colorBg);
    border-right: 1px solid var(--colorBorder);
}

#browser:not(.maximized) #titlebar > button {
    height: 43px !important;
}

.color-behind-tabs-off #titlebar > button {
    background: var(--colorAccentBg);
    color: var(--colorAccentFg);
}

.mainbar > .toolbar-mainbar:not(.dummy) {
	z-index: 10;
}

